# PracticaWeb

./: Dockerfile  README.md  addboards.py  api.py  db.sqlite3  forms.py  pyproject.toml  urls.py
PracticaWeb/: README.md  db.sqlite3  pyproject.toml
PracticaWeb/board/: forms.py  models.py  urls.py  views.py
PracticaWeb/board/migrations/: 0001_initial.py
PracticaWeb/board/static/board/css/: style.css
PracticaWeb/board/templates/board/: board_list.html  thread_view.html
PracticaWeb/project/: settings.py  urls.py
board/: forms.py  models.py  views.py
board/migrations/: 0001_initial.py
board/static/board/css/: style.css
board/templates/board/: board_list.html  board_view.html  create_thread.html  edit_post.html  thread_view.html
login/: urls.py  views.py
login/templates/registration/: login.html  register.html
project/: urls.py
static/board/css/: style.css
templates/board/: create_thread.html  edit_post.html
tests/: test_e2e.py
